# scenharnist

./: .gitignore  README.md  flake.nix  pyproject.toml
docs/superpowers/plans/: 2026-07-19-prompting-tests.md  2026-07-19-scenharnist.md
docs/superpowers/specs/: 2026-07-19-prompting-tests-design.md  2026-07-19-scenharnist-design.md
scenharnist/: bake_render.py  bonemap.py  cli.py  loop.py  paths.py  render.py  rigdigest.py  spec.py
tests/: conftest.py  prompting_cases.py  test_bonemap.py  test_cli.py  test_loop.py  test_paths.py  test_prompting.py  test_prompting_cases.py  test_render_smoke.py  test_rigdigest.py  test_spec.py
